--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,8 @@ services:
       - PGPORT=5432
   pgadmin:
     image: dpage/pgadmin4
+    logging:
+      driver: none
     environment:
       - PGADMIN_DEFAULT_EMAIL=pholawat.tangsatit@gmail.com
       - PGADMIN_DEFAULT_PASSWORD=password
