--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     environment:
       - POSTGRES_PASSWORD=postgres_password
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
   nginx:
     depends_on:
       - api
@@ -33,7 +33,7 @@ services:
     environment:
       - PGUSER=postgres
       - PGHOST=postgres
-      - PGDATABASE=smartPooDB
+      - PGDATABASE=postgres
       - PGPASSWORD=postgres_password
       - PGPORT=5432
   pgadmin:
@@ -41,10 +41,12 @@ services:
     logging:
       driver: none
     environment:
-      - PGADMIN_DEFAULT_EMAIL=pholawat.tangsatit@gmail.com
+      - PGADMIN_DEFAULT_EMAIL=postgres@admin.com
       - PGADMIN_DEFAULT_PASSWORD=password
       - PGADMIN_PORT=5050
     volumes:
       - ./pgadmin-data:/var/lib/pgadmin
     ports:
       - "5050:80"
+volumes:
+  pgdata:
