add gender to restroom table

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,53 +1,53 @@
-version: "3"
+version: '3'
 services:
-  webapp:
-    stdin_open: true
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./webapp
-    volumes:
-      - /app/node_modules
-      - ./webapp:/app
-  postgres:
-    image: "postgres:latest"
-    environment:
-      - POSTGRES_PASSWORD=postgres_password
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-  nginx:
-    depends_on:
-      - api
-    restart: always
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./nginx
-    ports:
-      - "80:80"
-  api:
-    build:
-      dockerfile: Dockerfile.dev
-      context: ./server
-    volumes:
-      - /app/node_modules
-      - ./server:/app
-    environment:
-      - PGUSER=postgres
-      - PGHOST=postgres
-      - PGDATABASE=postgres
-      - PGPASSWORD=postgres_password
-      - PGPORT=5432
-  pgadmin:
-    image: dpage/pgadmin4
-    logging:
-      driver: none
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=postgres@admin.com
-      - PGADMIN_DEFAULT_PASSWORD=password
-      - PGADMIN_PORT=5050
-    volumes:
-      - pgadmin:/var/lib/pgadmin
-    ports:
-      - "5050:80"
+    webapp:
+        stdin_open: true
+        build:
+            dockerfile: Dockerfile.dev
+            context: ./webapp
+        volumes:
+            - /app/node_modules
+            - ./webapp:/app
+    postgres:
+        image: 'postgres:latest'
+        environment:
+            - POSTGRES_PASSWORD=postgres_password
+        volumes:
+            - pgdata:/var/lib/postgresql/data
+    nginx:
+        depends_on:
+            - api
+        restart: always
+        build:
+            dockerfile: Dockerfile.dev
+            context: ./nginx
+        ports:
+            - '3050:80'
+    api:
+        build:
+            dockerfile: Dockerfile.dev
+            context: ./server
+        volumes:
+            - /app/node_modules
+            - ./server:/app
+        environment:
+            - PGUSER=postgres
+            - PGHOST=postgres
+            - PGDATABASE=postgres
+            - PGPASSWORD=postgres_password
+            - PGPORT=5432
+    pgadmin:
+        image: dpage/pgadmin4
+        logging:
+            driver: none
+        environment:
+            - PGADMIN_DEFAULT_EMAIL=postgres@admin.com
+            - PGADMIN_DEFAULT_PASSWORD=password
+            - PGADMIN_PORT=5050
+        volumes:
+            - pgadmin:/var/lib/pgadmin
+        ports:
+            - '5050:80'
 volumes:
-  pgdata:
-  pgadmin:
+    pgdata:
+    pgadmin:
