--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,12 +21,13 @@ jobs:
     - name: Copy file via scp
       uses: appleboy/scp-action@master
       env:
-        host: ${{ secrets.SSH_HOST }}
+        HOST: ${{ secrets.SSH_HOST }}
         USERNAME: ${{ secrets.SSH_USERNAME }}
+        PORT: 22
         KEY: ${{ secrets.SSH_KEY }}
       with:
         source: "."
-        target: "/root/production"
+        target: "production"
         
     - name: Executing remote command
       uses: appleboy/ssh-action@master
