--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,9 @@ jobs:
     name: ssh into droplet
     runs-on: ubuntu-latest
     steps:
-    - name: Copy file via scp
+    - uses: actions/checkout@v1
+    
+    - name: Copy files
       uses: appleboy/scp-action@master
       env:
         HOST: ${{ secrets.SSH_HOST }}
@@ -26,7 +28,7 @@ jobs:
         PORT: 22
         KEY: ${{ secrets.SSH_KEY }}
       with:
-        source: "./*"
+        source: "/"
         target: "/root/production"
         
     - name: Executing remote command
