--- a/webapp/package.json
+++ b/webapp/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "redux": "^4.0.5",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@types/material-ui": "^0.21.8",
+    "@types/react-router-dom": "^5.1.7",
     "@types/react-scroll": "^1.8.2"
   }
 }
